logo words done

--- a/job-management-app/src/styles/JobListPage.css
+++ b/job-management-app/src/styles/JobListPage.css
@@ -97,7 +97,7 @@ li {
 
 
 .apply-btn {
-    background: linear-gradient(135deg, #ff7e5f, #feb47b);
+    background: linear-gradient(135deg, #ff7e5f, #fe7bca);
     width: 285px;
     height: 45px;
     border-radius: 8px;
